# ocm

./: .gitignore  CLAUDE.md  README.md  build.bat  build.sh  install.bat  install.sh  opencode-config-manager.spec  pyproject.toml
.github/workflows/: build.yml
scripts/: ccl  ccl.bat
src/opencode_config_manager/: __init__.py  __main__.py  _version.py  api.py  cli.py  config.py
src/opencode_config_manager/commands/: __init__.py  cache.py  debug.py  provider.py  scan.py  update.py  utils.py
