[project]
name = "opencode-config-manager"
version = "1.0.0"
description = "Gestor de providers locales para opencode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
opencode-config-manager = "opencode_config_manager.cli:main"
opencode = "opencode_config_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_config_manager"]
